--- a/src/main/resources/templates/fragmentos/fragmentos.html
+++ b/src/main/resources/templates/fragmentos/fragmentos.html
@@ -7,16 +7,33 @@
 </head>
 <body>
 	<nav class="navbar navbar-expand-lg navbar-dark bg-dark" th:fragment="cabecalho">
-		<a class="navbar-brand" href="#">Gerenciador de Tarefas</a>
+		<a class="navbar-brand" href="/">Gerenciador de Tarefas</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-app">
 			<span class="navbar-toggler-icon"></span>
 		</button>
 		<div class="collapse navbar-collapse" id="navbar-app">
-			<div class="navbar-nav">
-				<a class="nav-item nav-link" href="/">Home</a>
-				<a class="nav-item nav-link" href="/tarefas/listar">Tarefas</a>
-				<a class="nav-item nav-link" href="/logout">Sair</a>
-			</div>
+			<ul class="navbar-nav">
+				<li class="nav-item">
+					<a class="nav-link" href="/">Home</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="/tarefas/listar">Tarefas</a>
+				</li>
+				<li class="nav-item dropdown">
+					<a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">Apostas</a>
+					<div class="dropdown-menu">
+						<a class="dropdown-item" href="/apostas/megasena">Mega-Sena</a> 
+						<a class="dropdown-item" href="/apostas/lotofacil">Lotofácil</a> 
+						<a class="dropdown-item" href="/apostas/quina">Quina</a>
+					</div>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="/resultados/consultar">Resultados</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="/logout">Sair</a>
+				</li>								
+			</ul>
 		</div>
 	</nav>
 	<script src="/webjars/jquery/3.4.1/jquery.min.js"></script>
